test/errors/int_overflow_mul.haste
const x = 9223372036854775807 * 2;
